--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@foal/core": "^5.0.0",
+    "@foal/swagger": "^5.0.1",
     "@foal/typeorm": "^5.0.0",
     "source-map-support": "~0.5.21",
     "sqlite3": "~5.1.7",
@@ -34,13 +35,13 @@
     "@foal/cli": "^5.0.0",
     "@types/mocha": "10.0.10",
     "@types/node": "22.15.21",
+    "@typescript-eslint/eslint-plugin": "~6.5.0",
+    "@typescript-eslint/parser": "~6.5.0",
     "concurrently": "~9.1.2",
+    "eslint": "~8.48.0",
     "mocha": "~11.5.0",
     "supertest": "~7.1.1",
     "supervisor": "~0.12.0",
-    "eslint": "~8.48.0",
-    "@typescript-eslint/eslint-plugin": "~6.5.0",
-    "@typescript-eslint/parser": "~6.5.0",
     "typescript": "~5.5.4"
   }
 }
